# taylorsilva

./: .gitignore  .hgignore  .stylelintrc.js  AGENTS.md  Cargo.toml  Makefile.in  README.md  client.py  eslint-rollouts.config.mjs  index  moz.build  smart-window-motion-docs-SOT.html  smart-window-motion-docs.html  smart-window-motion.tokens.json
.cargo/: config.toml.in
.github/workflows/: micah-ci.yml
accessible/base/: EmbeddedObjCollector.h
accessible/html/: HTMLSelectAccessible.h
accessible/ipc/: DocAccessibleChild.cpp
accessible/mac/: MOXAccessibleBase.mm  MOXAccessibleProtocol.h
browser/: moz.configure
browser/app/: BrowserDefines.h
browser/components/: DesktopActorRegistry.sys.mjs  moz.build
browser/installer/: Makefile.in
caps/: nsScriptSecurityManager.cpp
config/: milestone.txt
dom/: metrics.yaml
gfx/: metrics.yaml
gradle/: libs.versions.toml
image/: SourceBuffer.cpp  SurfaceCache.cpp  imgLoader.cpp
intl/: update-icu.sh
js/: app.mozbuild
media/: update-libjpeg.sh
mfbt/: CheckedInt.h
micah/: .dockerignore  .env.example  .gitignore  Dockerfile  MICAH.md  README.md  SETUP.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
netwerk/: metrics.yaml
nsprpub/: TAG-INFO
security/lockstore/lockstore_rs/: Cargo.toml
security/lockstore/lockstore_rs/tests/: datastore_tests.rs  keystore_tests.rs
supply-chain/: audits.toml  config.toml
toolkit/: moz.build  moz.configure
widget/: GfxInfoBase.cpp  MouseEvents.h  NativeMenu.h  PuppetWidget.cpp  PuppetWidget.h  WidgetEventImpl.cpp
(+3680 files in other folders)
